--- a/WordCloud.ipynb
+++ b/WordCloud.ipynb
@@ -74,7 +74,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import re # 정규표현식 // 어떤 문장이 있을때 내가 원하는 패턴을 추출출\n",
+        "import re # 정규표현식 // 어떤 문장이 있을때 내가 원하는 패턴을 추출\n",
         "\n",
         "t = \"\"\n",
         "for i in total:\n",
